[tool.poetry]
name = "todo_application"
version = "0.1.0"
description = ""
authors = ["MohamedElmdary <engm5081@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
bson = "^0.5.10"
redis = "^3.5.3"
pymongo = "^3.12.0"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
